List some QFT dualities

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -907,6 +907,8 @@ $\Nsusy=2$ $\to$ 2d $\Nsusy=(2,2)$.
 
 \subsection{4d \(\Nsusy=2\)}
 
+There can be no continuous flavor symmetry enhancement.
+
 % todo: Hitchin system
 
 The theory on $\RR^4_{\epsilon_1,0}$ (Nekrasov--Shatashvili limit) $\leftrightarrow$ quantum integrable system with Planck constant~$\epsilon_1$.
@@ -1252,6 +1254,29 @@ K\"ahler form whose metric is Ricci flat.
 
 
 \section{Dualities}
+
+\subsection{Field theory dualities}
+
+2d $\Nsusy=(0,2)$ Gadde--Gukov--Putrov triality (IR).
+
+2d $\Nsusy=(2,2)$ mirror symmetry of Calabi--Yau sigma models (exact).
+
+2d $\Nsusy=(2,2)$ Hori--Tong ($\Lie{SU}$), Hori ($\Lie{Sp}$, $\Lie{SO}$ groups), plus adjoint (ADE-type and $(2,2)^*$-like) dualities (IR).
+
+2d $\Nsusy=(2,2)$ Hori--Vafa/Hori--Kapustin duality of gauged linear sigma models and Landau--Ginzburg models (IR).
+
+3d Chern--Simons level-rank duality.
+
+3d $\Nsusy=2$ Aharony, Giveon--Kutasov, Aharony--Fleischer dualities (IR).
+
+3d $\Nsusy=2$ and $\Nsusy=4$ mirror symmetry exchanging Coulomb and Higgs branches (IR).
+
+4d $\Nsusy=1$ Seiberg, Kutasov--Schwimmer, Brodie, Intriligator--Pouliot, Argyres--Intriligator--Leigh--Strassler, Klebanov cascade, Intriligator--Leigh--Strassler, duality (IR).
+
+S-duality of 4d $\Nsusy=2$ gauge theories (exact).
+
+S-duality of 4d $\Nsusy=4$ SYM (exact).
+
 
 \subsection{String theory dualities}
 
