Tweak paragraphs on theta functions

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -288,11 +288,11 @@ obeys $\Gamma_q(x+1)=\frac{1-q^x}{1-q}\Gamma_q(x)$
 and $\Gamma_q(x)\xrightarrow{q\to 1}\Gamma(x)$.
 It has simple poles at $x\in\ZZ_{\leq 0}$ and no zero.
 
-\paragraph{q-theta function} $\theta(z;q)=(z;q)_\infty(q/z;q)_\infty$ obeys $\theta(z;q)=\theta(q/z;q)=-z\theta(1/z;q)$.
-
 \paragraph{Dedekind eta function.}  Modular form of weight~$\frac{1}{2}$ given by $\eta(\tau)=q^{1/24}(q;q)_\infty$ where $q=\E^{2\pi\I\tau}$.
 
-\paragraph{Theta function}  $\vartheta_1(x;q)=-\I x^{1/2}q^{1/8}(q;q)_\infty(qx;q)_\infty(\frac{1}{x};q)_\infty$.
+\paragraph{Theta functions:} q-theta $\theta(z;q)=(z;q)_\infty(q/z;q)_\infty$ obeys $\theta(z;q)=\theta(q/z;q)=-z\theta(1/z;q)$.
+Variant $\theta_1(z;q)=\theta_1(\tau|u)=\I z^{-1/2}q^{1/12}\eta(\tau)\theta(z;q)=-\I z^{1/2}q^{1/8}(q;q)_\infty(qz;q)_\infty(\frac{1}{z};q)_\infty$
+with $z=\E^{2\pi\I u}$.
 
 \paragraph{Elliptic gamma function}
 $\Gamma(z;p,q)=\plexp\frac{z-pq/z}{(1-p)(1-q)}=\prod_{m=0}^{\infty}\prod_{n=0}^{\infty}(1-p^{m+1}q^{m+1}z^{-1})/(1-p^mq^nz)$.
