Add some 4d N=1 dualities

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1277,6 +1277,18 @@ S-duality of 4d $\Nsusy=2$ gauge theories (exact).
 
 S-duality of 4d $\Nsusy=4$ SYM (exact).
 
+\subsection{4d \(\Nsusy=1\) dualities}
+
+Seiberg: $\Lie{SU}(N_c)$, $N_f\square$, $N_f\overline{\square}$ $\Leftrightarrow$
+$\Lie{SU}(N_f-N_c)$, $N_f\square$, $N_f\overline{\square}$, $N_f^2$~free, with $W=M\tilde{Q}Q$.
+
+Seiberg: $\Lie{SO}(N_c)$, $N_f\square$ $\Leftrightarrow$
+$\Lie{SO}(N_f-N_c+4)$, $N_f\square$, $\#?$~free, $W=?$
+
+Seiberg: $\Lie{USp}(2N_c)$, $2N_f\square$ $\Leftrightarrow$
+$\Lie{USp}(2N_f-2N_c-4)$, $2N_f\square$, $\#?$~free, $W=?$
+
+These three cases are self-dual when $C(R_{\text{chirals}})=2C(\text{adj})$, namely $N_f=2N_c$, $N_f=2(N_c-2)$ and $N_f=2(N_c+1)$ respectively; adding an adjoint gives $\Nsusy=2$ SCFTs.
 
 \subsection{String theory dualities}
 
