More info on data needed for some gauge theories

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -883,9 +883,11 @@ $\Nsusy=2$ $\to$ 2d $\Nsusy=(2,2)$.
 
 \section{Supersymmetric gauge theories}
 
+A gauge group is a compact reductive Lie group, \eg, $(SU(3)\times SU(2)\times U(1))/\ZZ_6$.
+
 \subsection{Maximal super Yang--Mills}
 
-\paragraph{Data:} semisimple gauge Lie group.
+\paragraph{Data:} gauge group.
 
 \paragraph{Lorentzian} 10d $\Nsusy=1$ SYM is anomalous unless the gauge group is abelian.  Its dimensional reductions are anomaly-free and have one gauge field, $10-d$ scalars and $\Nsusy$ (symplectic or Majorana, and Weyl or not) spinors.  The Lagrangian's $R$-symmetry $\Lie{Spin}(10-d)$ is contained in the automorphism group of the superalgebra (they coincide for $d\geq 5$).
 \begin{tab}{rr@{ }lr@{}l}
@@ -929,9 +931,15 @@ Lift to $\RR^4\times S^1$ gives $K$-theoretic Nekrasov partition function.  The 
 
 \subsection{3d \(\Nsusy=4\)}
 
-Complex reductive group~$G$ and
+Gauge group~$G$ and
 finite-dimensional symplectic representation~$\repr{M}$ of~$G$.
 %% according to Kodera-Nakajima 1608.00875
+
+\subsection{3d \(\Nsusy=2\)}
+
+Data: gauge group~$G$, quantized trace on $\lie{g}$ for the
+Chern--Simons term, representation~$R$ of~$G$ for chiral multiplets,
+gauge-invariant superpotential (may break $R$-symmetry).
 
 \section{Other theories}
 
