Change notation of R-symmetry (remove dollars)

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -755,7 +755,7 @@ d &\multicolumn{2}{c}{$t\equiv 0$} &\multicolumn{2}{c}{$1$}
 \end{tab}
 
 \paragraph{Flavour symmetries} of $N$ minimal spinors.
-This is also the $R$-symmetry of the $N$-extended superalgebra.
+This is also the R-symmetry of the $N$-extended superalgebra.
 For (symplectic) Majorana Weyl spinors, specify $N=(N_L,N_R)$ left/right-handed.
 \begin{tab}{l@{}>{$}l<{$}}
 M & \hspace{-2pt}\begin{cases} \lie{u}(N)&\text{if $d$ even}\\\lie{so}(N)&\text{if $d$ odd}\end{cases}\\
@@ -804,7 +804,7 @@ Namely, $[P_{a},P_{b}]=0$, $[M_{ab},P_{c}]=2ih_{c[a}P_{b]}$, and $[M_{ab},M^{cd}
 Add supercharges in some spinor representation~$Q$ of the Poincar\'e algebra (so $[P_{a},Q]=0$).
 Their anticommutator transforms in the representation $S^2 Q$ and should include the one-form~$P$.
 Depending on $s,t$ they can include other $k$-forms~$Z$, called central charges because $[P,Z]=[Z,Z]=0$.
-The super-Poincar\'e algebra is $((\RR^{s,t}\times Z).Q)\rtimes (\lie{so}(s,t)\times R)$, where the $R$-symmetry acts on~$Q$.
+The super-Poincar\'e algebra is $((\RR^{s,t}\times Z).Q)\rtimes (\lie{so}(s,t)\times R)$, where the R-symmetry acts on~$Q$.
 This Lie superalgebra is graded: $\operatorname{gr}(\RR^{s,t}\times Z)=-2$, $\operatorname{gr}(Q)=-1$, and $\operatorname{gr}(\lie{so}(s,t)\times R)=0$.
 The supertranslations consist of $(\RR^{s,t}\times Z).Q$.
 
@@ -825,11 +825,11 @@ Since $S^2 Q$ has $1$, $2$, and $5$-forms, there are $2$-form and $5$-form centr
 \smallskip
 
 \paragraph{Superconformal algebras} are the same as super $AdS_{d+1}$.
-The bosonic part is $\lie{so}(d,2)$ and $R$-symmetries.
+The bosonic part is $\lie{so}(d,2)$ and R-symmetries.
 As a supermatrix: $\begin{pmatrix}\lie{so}(d,2)& Q+S\\ Q-S&R\end{pmatrix}$ or $\lie{so}(d,2)\leftrightarrow R$.  Note that $\{Q,S\}$ contains~$R$.
 For $d=2$, the finite conformal algebra is $\lie{so}(2,2)=\lie{so}(2,1)\oplus \lie{so}(2,1)$, sum of two $d=1$ algebras, so the superalgebra is sum of two $d=1$ superalgebras.
 \begin{tab}{lllc}
-$d$& Superalgebra& $R$-symmetries & \#Q+\#S\\ \midrule
+$d$& Superalgebra& R-symmetries & \#Q+\#S\\ \midrule
 $1$&  $\lie{osp}(N|2)$ & $\lie{o}(N)$    & $2N$ \\
    &  $\lie{su}(N|1,1)$  &$\lie{su}(N)\oplus \lie{u}(1)$ for $N\neq 2$ &$ 4N$ \\
    &  $\lie{su}(2|1,1)           $    &$\lie{su}(2)              $ &$ 8   $\\
@@ -892,9 +892,9 @@ Gauge couplings are one real parameter per simple factor in~$\lie{g}$.
 
 \paragraph{Data:} gauge group.
 
-\paragraph{Lorentzian} 10d $\Nsusy=1$ SYM is anomalous unless the gauge group is abelian.  Its dimensional reductions are anomaly-free and have one gauge field, $10-d$ scalars and $\Nsusy$ (symplectic or Majorana, and Weyl or not) spinors.  The Lagrangian's $R$-symmetry $\Lie{Spin}(10-d)$ is contained in the automorphism group of the superalgebra (they coincide for $d\geq 5$).
+\paragraph{Lorentzian} 10d $\Nsusy=1$ SYM is anomalous unless the gauge group is abelian.  Its dimensional reductions are anomaly-free and have one gauge field, $10-d$ scalars and $\Nsusy$ (symplectic or Majorana, and Weyl or not) spinors.  The Lagrangian's R-symmetry $\Lie{Spin}(10-d)$ is contained in the automorphism group of the superalgebra (they coincide for $d\geq 5$).
 \begin{tab}{rr@{ }lr@{}l}
-  dim.& \multicolumn{2}{c}{$\Nsusy$ spinors} & autom.\@ & ${}\supset\text{$R$-sym.\@}$ \\\midrule
+  dim.& \multicolumn{2}{c}{$\Nsusy$ spinors} & autom.\@ & ${}\supset\text{R-sym.\@}$ \\\midrule
   10d & $(1,0)$  & MW & \\
   9d  & $1$      & M  & \\
   8d  & $1$      & M  & $\Lie{U}(1)$ & ${}=\Lie{Spin}(2)$ \\
@@ -906,7 +906,7 @@ Gauge couplings are one real parameter per simple factor in~$\lie{g}$.
   2d  & $(8,8)$  & MW & $\Lie{Spin}(8)^2$ & ${}\supset\Lie{Spin}(8)$ \\
   1d  & $16$     & M  & $\Lie{Spin}(16)$ & ${}\supset\Lie{Spin}(9)$ \\
 \end{tab}
-% todo: discrete $R$-symmetries?
+% todo: discrete R-symmetries?
 
 \subsection{4d \(\Nsusy=4\)}
 
@@ -948,7 +948,7 @@ finite-dimensional symplectic representation~$\repr{M}$ of~$G$.
 
 Data: gauge group~$G$, quantized trace on $\lie{g}$ for the
 Chern--Simons term, representation~$V$ of~$G$ for chiral multiplets,
-$G$-invariant superpotential (may break $R$-symmetry).
+$G$-invariant superpotential (may break R-symmetry).
 
 \subsection{1d \(\Nsusy=4\)}
 
@@ -957,7 +957,7 @@ Data: gauge group~$G$, representation~$V$ of~$G$ for chiral multiplets.
 Gauge couplings, FI parameters, superpotential~$W$.
 Flavour Wilson line, twisted and real masses $v,m_1+im_2,m_3\in\lie{g}_F$ that commute.
 
-$R$-symmetry: $SU(2)$, times $U(1)$ if $W$~has charge~$2$.  Mixing with flavour symmetries not fixed by superconformal algebra.
+R-symmetry: $SU(2)$, times $U(1)$ if $W$~has charge~$2$.  Mixing with flavour symmetries not fixed by superconformal algebra.
 
 
 \subsection{1d \(\Nsusy=2\)}
@@ -972,7 +972,7 @@ Continuous data: gauge couplings, FI parameters, flavor Wilson line and real mas
 
 Special case: Fermi multiplets in representation~$V_{\text{f}}$ of~$G$ with $G$-equivariant holomorphic maps $E\colon V\to V_{\text{f}}$ and $J\colon V\to V_{\text{f}}^{\vee}$ obeying $J\cdot E=0$ are equivalent to Wilson line in $M=\wedge V_{\text{f}}\otimes\det^{-1/2}V_{\text{f}}$ with $Q=E\wedge{}+J\lrcorner{}$.
 
-$R$-symmetry: $U(1)$ if $Q\colon V\to \End M$ has charge~$1$.  Mixing with flavour symmetries not fixed by superconformal algebra.
+R-symmetry: $U(1)$ if $Q\colon V\to \End M$ has charge~$1$.  Mixing with flavour symmetries not fixed by superconformal algebra.
 
 \paragraph{NLSM}
 Chiral multiplet: scalar~$\phi$ in a K\"ahler target~$X$ and fermion in holomorphic bundle~$\pullback{\phi}{T_X}$.
@@ -1471,7 +1471,7 @@ $\alpha_i(\Sigma)=0$.
 \setlength{\parindent}{0pt}
 
 %\begin{itemize}
-%\item Say that only abelian $R$-symmetries can mix with global symmetries along the RG-flow.
+%\item Say that only abelian R-symmetries can mix with global symmetries along the RG-flow.
 %\end{itemize}
 
 
