Homology of CP^n

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1367,6 +1367,10 @@ free magnetic $\log(R\Lambda)/R$,
 Higgs (constant),
 confining $\sigma R$.
 
+\subsection{Homology and cohomology}
+
+\paragraph[Complex projective space]{$H_k(\CC\PP^n,M)$}${}=M$ for $0\leq k\leq 2n$ even, else~$0$.
+
 \subsection{Homotopy groups \(\pi\sb n\)}
 
 \paragraph{Basic properties.} $\pi_0(X,x)$ is the set of connected components.  $\pi_1(X,x)$ is the fundamental group.  For $k\geq 1$, $\pi_k(X,x)$ only depends on the connected component of~$x$.  $\pi_k(X\times Y,(x,y))=\pi_k(X,x)\times\pi_k(Y,y)$.
