More consistent notation for osp^*(2|2)

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -692,7 +692,7 @@ For $\lie{D}^0$ and $\lie{D}^2$, $\alpha$ is real.  For $\lie{D}^1$, $\alpha=1+i
 
 \paragraph{Some isomorphisms:}
 $\lie{su}(1,1|1)=\lie{sl}(2|1)=\lie{osp}(2|2)$
-and $\lie{su}(2|1)=\lie{osp}(2^*|2,0)$
+and $\lie{su}(2|1)=\lie{osp}^*(2|2,0)$
 and $\lie{D}^p(2,1,\alpha=1)=\lie{osp}(4-p,p|2)$
 and $\lie{osp}(6,2|4)=\lie{osp}^*(8|4)$.
 % todo: complete this list
