Layout of spinor-dimension table

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -737,21 +737,21 @@ the case $s-t\equiv\pm 2$ requires $\eta=\mp (-1)^{d/2}$.
 When $s-t\equiv 3,4,5$, a set of $2n$ spinors can be symplectic Majorana: $(\lambda^I)^*=B\Omega_{IJ}\lambda^J$ for $\Omega=((0,\one_n);(-\one_n,0))$.
 (Symplectic) Majorana--Weyl spinors exist for $s-t\equiv 0,4\bmod{8}$.
 The table also includes the real dimension of the minimal spinor.
-\begin{tab}{c*{4}{>{ }l@{ }r<{ }}}
-d &\multicolumn{2}{c}{$t\equiv 0$} &\multicolumn{2}{c}{$1$}
+\begin{tab}{c@{ }>{\footnotesize}l@{}>{\footnotesize}r@{}*{4}{>{ }l@{ }r<{ }}}
+d & & &\multicolumn{2}{c}{$t\equiv 0$} &\multicolumn{2}{c}{$1$}
 & \multicolumn{2}{c}{$2$} & \multicolumn{2}{c}{$3\bmod{4}$} \\ \midrule
-1 & M     & 1 & M    & 1 &       &   & &   \\
-2 & M$^-$ & 2 & MW   & 1 & M$^+$ & 2 & &   \\
-3 & s     & 4 & M    & 2 & M     & 2 & s     & 4 \\
-4 & sW    & 4 & M$^+$& 4 & MW    & 2 & M$^-$ & 4 \\
-5 & s     & 8 & s    & 8 & M     & 4 & M     & 4 \\
-6 & M$^+$ & 8 & sW   & 8 & M$^-$ & 8 & MW    & 4 \\
-7 & M     & 8 & s    & 16 & s    & 16 & M    & 8 \\
-8 & MW    & 8 & M$^-$& 16 & sW   & 16 & M$^+$& 16 \\
-9 & M     & 16& M    & 16 & s    & 32 & s    & 32 \\
-10& M$^-$ & 32& MW   & 16 & M$^+$& 32 & sW   & 32 \\
-11& s     & 64& M    & 32 & M    & 32 & s    & 64 \\
-12& sW    & 64& M$^+$& 64 & MW   & 32 & M$^-$ & 64\\
+1 & (D&2) & M     & 1 & M    & 1 &       &   & &   \\
+2 & (W&2) & M$^-$ & 2 & MW   & 1 & M$^+$ & 2 & &   \\
+3 & (D&4) & s     & 4 & M    & 2 & M     & 2 & s     & 4 \\
+4 & (W&4) & sW    & 4 & M$^+$& 4 & MW    & 2 & M$^-$ & 4 \\
+5 & (D&8) & s     & 8 & s    & 8 & M     & 4 & M     & 4 \\
+6 & (W&8) & M$^+$ & 8 & sW   & 8 & M$^-$ & 8 & MW    & 4 \\
+7 & (D&16) & M     & 8 & s    & 16 & s    & 16 & M    & 8 \\
+8 & (W&16) & MW    & 8 & M$^-$& 16 & sW   & 16 & M$^+$& 16 \\
+9 & (D&32) & M     & 16& M    & 16 & s    & 32 & s    & 32 \\
+10& (W&32) & M$^-$ & 32& MW   & 16 & M$^+$& 32 & sW   & 32 \\
+11& (D&64) & s     & 64& M    & 32 & M    & 32 & s    & 64 \\
+12& (W&64) & sW    & 64& M$^+$& 64 & MW   & 32 & M$^-$ & 64\\
 \end{tab}
 
 \paragraph{Flavour symmetries} of $N$ minimal spinors.
