Correct R-symmetry in USp case

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -760,9 +760,10 @@ For (symplectic) Majorana Weyl spinors, specify $N=(N_L,N_R)$ left/right-handed.
 \begin{tab}{l@{}>{$}l<{$}}
 M & \hspace{-2pt}\begin{cases} \lie{u}(N)&\text{if $d$ even}\\\lie{so}(N)&\text{if $d$ odd}\end{cases}\\
 MW & : \lie{so}(N_L)\times \lie{so}(N_R) \\
-s & : \lie{usp}(N) \\
-sW & : \lie{usp}(N_L)\times \lie{usp}(N_R)\\
+s & : \lie{usp}(2N) \\
+sW & : \lie{usp}(2N_L)\times \lie{usp}(2N_R)\\
 \end{tab}
+\Eg, Lorentzian 6d $(2,0)$ has $\lie{usp}(4)\times\lie{usp}(0)$ R-symmetry.
 
 \paragraph{Products of spinor representations.}
 For odd $d=2m+1$, let $\mathcal{S}$ be a spinor representation of complex dimension $2^{m}$.
