Add Chern--Simons form

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1016,6 +1016,10 @@ We get a $\ZZ\rtimes\ZZ_2$ automorphism group.
 
 \paragraph{Unitary minimal model} $\mathcal{M}_{k+2,k+1}$ is coset $\frac{\hat{\lie{su}}(2)_{k-1}\times\hat{\lie{su}}(2)_1}{\hat{\lie{su}}(2)_k}$
 
+
+\subsection{Chern--Simons}
+Chern--Simons $(2m-1)$-form $m\Tr\bigl(A\int_0^1\dd{t}(tdA+t^2A^2)^{m-1}\bigr)$.
+
 \subsection{Supergravity and strings}
 
 \paragraph{String actions}
