--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -204,6 +204,7 @@
 \newcommand{\one}{\mathbbm{1}}
 \newcommand{\pullback}[2]{#1^*#2}
 \newcommand{\bundle}{\mathcal}
+\newcommand{\Nf}{N_f}
 
 \ExplSyntaxOn
 \newcommand{\Lie}[1]{
@@ -909,6 +910,11 @@ Gauge couplings are one real parameter per simple factor in~$\lie{g}$.
 \end{tab}
 % todo: discrete R-symmetries?
 
+\subsection{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
+
+$\Lie{SU}(2)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavor symmetry enhancement.
+For $\Nf=0$, non-trivial ``$\theta$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
+
 \subsection{4d \(\Nsusy=4\)}
 
 Data: gauge group, and for each simple fact a gauge coupling and theta angle: $\tau=\theta/(2\pi)+4\pi i/g^2$.
@@ -1046,6 +1052,8 @@ $(1,0)$ &\\
 M2-brane $\dd{s}^2=\Lambda^4\dd{x}^2+\frac{\dd{y}^2}{\Lambda^2}$ with $\Lambda=(1+\frac{c_2N_2l^6}{\abs{y}^6})^{-1/6}$, and
 M5-brane $\dd{s}^2=\Lambda\dd{x}^2+\dd{y}^2/\Lambda^2$ with $\Lambda=(1+\frac{c_5N_5l^3}{\abs{y}^3})^{-1/3}$,
 where $x\in\RR^{p,1}$ and $y\in\RR^{10-p}$.  In the near horizon $y\to 0$ these become $\textrm{AdS}_4\times S^7$ and $\textrm{AdS}_7\times S^4$ with $32$~Killing spinors.
+
+\paragraph{Branes} IIA strings: D0, F1 (strings), D2, D4, O4$^{\pm}$, $\widetilde{\mathrm{O4}}^+$, NS5, D6, D8 (wall), O8 (wall), \etc{}.  IIB strings: D$(-1)$, F1 (strings), D1, D3, $(p,q)$ 5-branes (includes D5 and NS5), O5$^{\pm}$, $\widetilde{\mathrm{O5}}^+$, D7, O7$^{\pm}$, ON$^0$, \etc{}.  M-theory: M2, M5, OM5, M9.
 
 \subsection{Integrable models}
 
