Clean up dimensional reduction

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -847,16 +847,15 @@ $6$&$ \lie{osp}(8^*|N) $ &$  \lie{usp}(N)\ \ (N $ even)& $8N$ \\
 \end{tab}
 
 
-\paragraph{Dimensional reduction} of Euclidean/Lorentzian supersymmetry
-algebras.  10d $\Nsusy=1$ $\to$ 6d $\Nsusy=(1,1)$ or $(2,0)$? $\to$ 5d
-$\Nsusy=2$ $\to$ 4d $\Nsusy=4$ $\to$ 3d $\Nsusy=8$.  Also 6d
-$\Nsusy=(1,0)$ $\to$ 5d $\Nsusy=1$ $\to$ 4d $\Nsusy=2$ $\to$ 3d
-$\Nsusy=4$ $\to$ 2d $\Nsusy=(4,4)$.  Also 4d $\Nsusy=1$ $\to$ 3d
-$\Nsusy=2$ $\to$ 2d $\Nsusy=(2,2)$.
-
-% todo: check
-% todo: check Euclidean vs Lorentzian
-% todo: complete
+\paragraph{Dimensional reduction} of Lorentzian supersymmetry algebras.
+The 1d column gives the number of real supercharges.
+\begin{tab}{ccccccc}
+  10d            & 6d      & 5d  & 4d  & 3d  & 2d      & 1d    \\\midrule
+  $\Nsusy=(1,0)$ & $(1,1)$ & $2$ & $4$ & $8$ & $(8,8)$ & $16$  \\
+                 & $(1,0)$ & $1$ & $2$ & $4$ & $(4,4)$ & $8$   \\
+                 &         &     & $1$ & $2$ & $(2,2)$ & $4$   \\
+\end{tab}
+% todo: Euclidean case
 
 \paragraph{Explicit supersymmetry algebras}
 4d $\Nsusy=2$ $\{Q_\alpha^A,\overline{Q}_{\dot{\alpha}}^B\} =
