Mention twisted multiplets

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -871,9 +871,9 @@ The 1d column gives the number of real supercharges.
 
 \paragraph{For \(16\) supercharges}, there is only the vector.
 
-\paragraph{For \(8\) supercharges}, vector and hyper.
+\paragraph{For \(8\) supercharges}, vector and hyper; in 2d $\Nsusy=(4,4)$ also twisted hyper.
 
-\paragraph{For \(4\) supercharges}, vector, chiral, linear multiplets.
+\paragraph{For \(4\) supercharges}, vector, chiral, linear multiplets; in 2d $\Nsusy=(2,2)$ also twisted chirals, semichirals, \ldots{}
 
 \paragraph{For \(2\) supercharges}, vector, chiral, linear, Fermi, \ldots{}
 
