--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -886,8 +886,25 @@ The 1d column gives the number of real supercharges.
 
 \section{Supersymmetric gauge theories}
 
-A gauge group is a compact reductive Lie group~$G$ such as $(SU(3)\times SU(2)\times U(1))/\ZZ_6$.
-Gauge couplings are one real parameter per simple factor in~$\lie{g}$.
+\subsection{Data for Lagrangians}
+
+\paragraph{Super Yang--Mills (SYM).} A gauge group is a compact reductive Lie group~$G$ such as $(\Lie{SU}(3)\times\Lie{SU}(2)\times\Lie{U}(1))/\ZZ_6$.
+The SYM term is $\mathcal{L}_{\text{SYM}}=g^{-2}\Tr F\wedge\star F+\text{superpartners}$, with one real gauge coupling~$g$ per simple factor.
+
+\paragraph{Theta term} in even dimension: $\theta\Tr F^{\wedge(d/2)}$ with periodic~$\theta$.
+
+\paragraph{Chern--Simons term} in 3d: $k\Tr\bigl(A\wedge\dd{A}+\frac{2}{3}A\wedge A\wedge A\bigr)$ with $k$~quantized (normalization missing).
+
+\paragraph{Matter.} For $16$~supercharges, none.
+For $8$~supercharges, symplectic representation $V\simeq\HH^n$ namely $G\to\Lie{USp}(2n)$.
+For $4$~supercharges, unitary representation $V\simeq\CC^n$ namely $G\to\Lie{U}(n)$.
+Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
+
+\paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\theta W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\theta[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
+
+\paragraph{R-symmetry mixing.}
+When it is abelian, the IR R-symmetry (that is part of the superconformal algebra) can be a mixture of the UV R-symmetry with abelian flavour symmetries.
+This is fixed in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization, assuming no accidental flavour symmetries.
 
 \subsection{Maximal super Yang--Mills}
 
@@ -909,18 +926,16 @@ Gauge couplings are one real parameter per simple factor in~$\lie{g}$.
 \end{tab}
 % todo: discrete R-symmetries?
 
-\subsection{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
+\paragraph{4d \(\Nsusy=4\)} has exactly marginal parameter $\tau=\theta/(2\pi)+4\pi i/g^2$.
 
-$\Lie{SU}(2)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavor symmetry enhancement.
-For $\Nf=0$, non-trivial ``$\theta$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
+\subsection{Theories with \(8\) supercharges}
 
-\subsection{4d \(\Nsusy=4\)}
+\paragraph{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
 
-Data: gauge group, and for each simple fact a gauge coupling and theta angle: $\tau=\theta/(2\pi)+4\pi i/g^2$.
+$\Lie{SU}(2N)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavor symmetry enhancement.
+For $\Lie{SU}(2)$ and $\Nf=0$, non-trivial ``$\theta$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
 
-\subsection{4d \(\Nsusy=2\)}
-
-Data: gauge group, representation for half-hypermultiplets. % todo: symplectic rep?
+\paragraph{4d \(\Nsusy=2\) generalities}
 
 There can be no continuous flavor symmetry enhancement.
 
@@ -934,29 +949,28 @@ Supersymmetric vacua $\leftrightarrow$ eigenstates.
 
 Lift to $\RR^4\times S^1$ gives $K$-theoretic Nekrasov partition function.  The 5d theory $\leftrightarrow$ relativistic version of the integrable system.
 
-\paragraph{\((G,G')\) Argyres--Douglas theories} (with $G$ and~$G'$ among $\Lie{A}_k$, $\Lie{D}_k$, $\Lie{E}_{6,7,8}$) are engineered as IIB strings on three-fold singularity $f_G(x_1,x_2)+f_{G'}(x_3,x_4)=0$ where $f_{A_k}(x,y)=x^2+y^{k+1}$ \etc{} (see \autopageref{page:ADE-polynomial}).
+\paragraph{4d \(\Nsusy=2\) \((G,G')\) Argyres--Douglas theories} (with $G$ and~$G'$ among $\Lie{A}_k$, $\Lie{D}_k$, $\Lie{E}_{6,7,8}$) are engineered as IIB strings on three-fold singularity $f_G(x_1,x_2)+f_{G'}(x_3,x_4)=0$ where $f_{A_k}(x,y)=x^2+y^{k+1}$ \etc{} (see \autopageref{page:ADE-polynomial}).
 
-\subsection{4d \(\Nsusy=1\)}
+\paragraph{3d \(\Nsusy=4\)}
 
-\paragraph{Superpotential term} $\int\dd[^2]\theta W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\theta[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field.
+\paragraph{2d \(\Nsusy=(4,4)\) gauge theories.}
+Typically get in the IR a direct sum of 2d $\Nsusy=(4,4)$ SCFTs (from the Coulomb and Higgs branches) whose central charges are different.
+Their $\Lie{SU}(2)\times\Lie{SU}(2)$ left/right-moving R-symmetries are different.
 
-\paragraph{Wess-Zumino model:} chiral multiplet~$\phi$ with $W=m\phi^2+g\phi^3$.
+\subsection{Theories with \(4\) supercharges}
 
-\paragraph{Pure supersymmetric Yang--Mills (SYM)} classically has $\Lie{U}(1)_R$ symmetry, broken by instantons to $\ZZ_{2h}$ with $h=C_2(\text{adj})$.  It confines, is mass-gapped, and has $C_2(A)$ vacua associated to breaking $\ZZ_{2h}$ to $\ZZ_2$ by gaugino condensation $\langle\lambda\lambda\rangle$.  Witten index $\Tr(-1)^F=h$.
+\paragraph{4d \(\Nsusy=1\) pure SYM} classically has $\Lie{U}(1)_R$ symmetry, broken by instantons to $\ZZ_{2h}$ with $h=C_2(\text{adj})$.  It confines, is mass-gapped, and has $C_2(A)$ vacua associated to breaking $\ZZ_{2h}$ to $\ZZ_2$ by gaugino condensation $\langle\lambda\lambda\rangle$.  Witten index $\Tr(-1)^F=h$.
 
-\subsection{3d \(\Nsusy=4\)}
+\paragraph{Wess-Zumino model:} chiral multiplet~$\phi$ with superpotential $W=m\phi^2+g\phi^3$.
 
-Gauge group~$G$ and
-finite-dimensional symplectic representation~$\repr{M}$ of~$G$.
-%% according to Kodera-Nakajima 1608.00875
+\paragraph{3d \(\Nsusy=2\)}
 
-\subsection{3d \(\Nsusy=2\)}
+\paragraph{2d \(\Nsusy=(2,2)\).}
+Classical $\Lie{U}(1)\times\Lie{U}(1)$ R-symmetry.
+The axial $\Lie{U}(1)$ R-symmetry has an anomaly with $\Lie{U}(1)$ gauge symmetry proportional to the total charge under that gauge symmetry.
+In any case the R-symmetry is abelian hence may mix with flavour symmetries to give IR R-symmetry.
 
-Data: gauge group~$G$, quantized trace on $\lie{g}$ for the
-Chern--Simons term, representation~$V$ of~$G$ for chiral multiplets,
-$G$-invariant superpotential (may break R-symmetry).
-
-\subsection{1d \(\Nsusy=4\)}
+\paragraph{1d \(\Nsusy=4\)}
 
 %% 1407.2567
 Data: gauge group~$G$, representation~$V$ of~$G$ for chiral multiplets.
@@ -966,7 +980,7 @@ Flavour Wilson line, twisted and real masses $v,m_1+im_2,m_3\in\lie{g}_F$ that c
 R-symmetry: $\Lie{SU}(2)$, times $\Lie{U}(1)$ if $W$~has charge~$2$.  Mixing with flavour symmetries not fixed by superconformal algebra.
 
 
-\subsection{1d \(\Nsusy=2\)}
+\paragraph{1d \(\Nsusy=2\)}
 
 %% 1407.2567
 Discrete data: gauge group~$G$, chiral multiplets in a representation~$V$ of~$G$,
